# Fastapi_postgres_crud

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  app.py  docker-compose.yaml  main.py  pyproject.toml  requirements.txt  ruff.toml
.github/workflows/: push_dockerfile  push_dockerfile.yml  pylint.yml  ruff.yml
database/: database.py
infra/: .env  Dockerfile  docker-compose.yaml
models/: models.py
nginx/: default.conf
schemas/: schemas.py
src/: main.py
src/database/: database.py
src/models/: models.py
src/schemas/: schemas.py
