[tool.poetry]
name = "fastapi-postgres-crud"
version = "0.1.0"
description = ""
authors = ["Vyacheslav <nodegopher@gmail.com>"]
readme = "README.md"
packages = [{ include = "src", from = "." }]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
sqlalchemy = "^2.0.35"
uvicorn = "^0.31.1"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
